--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
 
 	            <p>Atlas Africa Car est une agence de location de voitures basée à Casablanca, spécialisée dans la mobilité au Maroc. Nous proposons une large gamme de véhicules récents et bien entretenus, adaptés à tous vos besoins : affaires, tourisme, transferts aéroport, ou événements spéciaux. Notre équipe locale vous accompagne avec un service personnalisé, des tarifs transparents et une assistance 24/7 pour garantir votre confort et votre sécurité sur la route.</p>
               <p>Que vous soyez résident ou visiteur, profitez de notre expertise et de notre engagement pour rendre votre expérience de location simple, rapide et agréable. Découvrez le Maroc en toute liberté avec Atlas Africa Car.</p>
-<p><a href="#" class="btn btn-secondary py-3 px-4">Voir nos véhicules</a></p>
+<p><a href="car.html" class="btn btn-secondary py-3 px-4">Voir nos véhicules</a></p>
 	          </div>
 					</div>
 				</div>
@@ -207,7 +207,7 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2"><a href="#" class="logo">
+              <h2 class="ftco-heading-2"><a href="index.html" class="logo">
                 <img src="images/logo_black.PNG" alt="Atlas Africa Car" class="site-logo footer-logo">
               </a></h2>
               <p>Location de voitures à Casablanca et partout au Maroc. Service professionnel et assistance 24/7.</p>
@@ -222,11 +222,11 @@
             <div class="ftco-footer-widget mb-4 ml-md-5">
               <h2 class="ftco-heading-2">Information</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">About</a></li>
-                <li><a href="#" class="py-2 d-block">Services</a></li>
-                <li><a href="#" class="py-2 d-block">Term and Conditions</a></li>
-                <li><a href="#" class="py-2 d-block">Best Price Guarantee</a></li>
-                <li><a href="#" class="py-2 d-block">Privacy &amp; Cookies Policy</a></li>
+                <li><a href="about.html" class="py-2 d-block">About</a></li>
+                <li><a href="services.html" class="py-2 d-block">Services</a></li>
+                <li><a href="index.html" class="py-2 d-block">Term and Conditions</a></li>
+                <li><a href="contact.html" class="py-2 d-block">Best Price Guarantee</a></li>
+                <li><a href="index.html" class="py-2 d-block">Privacy &amp; Cookies Policy</a></li>
               </ul>
             </div>
           </div>
@@ -234,11 +234,11 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Customer Support</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">FAQ</a></li>
-                <li><a href="#" class="py-2 d-block">Payment Option</a></li>
-                <li><a href="#" class="py-2 d-block">Booking Tips</a></li>
-                <li><a href="#" class="py-2 d-block">How it works</a></li>
-                <li><a href="#" class="py-2 d-block">Contact Us</a></li>
+                <li><a href="contact.html" class="py-2 d-block">FAQ</a></li>
+                <li><a href="contact.html" class="py-2 d-block">Payment Option</a></li>
+                <li><a href="contact.html" class="py-2 d-block">Booking Tips</a></li>
+                <li><a href="contact.html" class="py-2 d-block">How it works</a></li>
+                <li><a href="contact.html" class="py-2 d-block">Contact Us</a></li>
               </ul>
             </div>
           </div>
