Enhaced background and contact

--- a/car-single-austral.html
+++ b/car-single-austral.html
@@ -74,10 +74,10 @@
       	<div class="row justify-content-center">
       		<div class="col-md-12">
       			<div class="car-details">
-      				<div class="img rounded" style="background-image: url(images/car_catalog/vogue.PNG);"></div>
+      				<div class="img rounded" style="background-image: url(images/car_catalog/renault-austral.jpg);"></div>
       				<div class="text text-center">
-      					<span class="subheading">Range Rover</span>
-      					<h2> Vogue</h2>
+      					<span class="subheading">Renault</span>
+      					<h2> Austral</h2>
       				</div>
       			</div>
       		</div>
