--- a/car.html
+++ b/car.html
@@ -248,6 +248,20 @@
     			</div>
 				<div class="col-md-4">
     				<div class="car-wrap rounded ftco-animate">
+    					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/renault-austral.jpg);">
+    					</div>
+    					<div class="text">
+    						<h2 class="mb-0"><a href="car-single-austral.html">Austral</a></h2>
+    						<div class="d-flex mb-3">
+	    						<span class="cat">Renault</span>
+								<p class="price ml-auto">450 Mad <span>/day</span></p>
+    						</div>
+    						<p class="d-flex mb-0 d-block"><a href="contact.html" class="btn btn-primary py-2 mr-1">Book now</a> <a href="car-single-austral.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    					</div>
+    				</div>
+    			</div>
+				<div class="col-md-4">
+    				<div class="car-wrap rounded ftco-animate">
     					<div class="img rounded d-flex align-items-end" style="background-image: url(images/car_catalog/elantra.jpg);">
     					</div>
     					<div class="text">
@@ -371,7 +385,7 @@
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text"> 22 Rue d'Anfa, Casablanca 20000, Maroc</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+212 708765015</span></a></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+212 679494949</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">contact@atlasafricacar.ma</span></a></li>
 	              </ul>
 	            </div>
