--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	  </nav>
     <!-- END nav -->
      
-    <div class="hero-wrap ftco-degree-bg" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
+    <div class="hero-wrap ftco-degree-bg" style="background-image: url('images/car_catalog/atlas_africa_car_services.jpeg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text justify-content-start align-items-center justify-content-center">
@@ -446,7 +446,7 @@
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text"> 22 Rue d'Anfa, Casablanca 20000, Maroc</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+212 708765015</span></a></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+212 679494949</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">contact@atlasafricacar.ma</span></a></li>
 	              </ul>
 	            </div>
