--- a/car-single-evoque-r.html
+++ b/car-single-evoque-r.html
@@ -56,7 +56,7 @@
 	  </nav>
     <!-- END nav -->
     
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/bg_3.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/car_catalog/atlas_africa_car_services2.jpeg');" stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-start">
@@ -69,7 +69,7 @@
     </section>
 		
 
-		<section class="ftco-section brand-accent ftco-car-details">
+		<section class="ftco-section bg-primary ftco-car-details">
       <div class="container">
       	<div class="row justify-content-center">
       		<div class="col-md-12">
@@ -117,7 +117,7 @@
             <div class="media block-6 services">
               <div class="media-body py-md-4">
               	<div class="d-flex mb-3 align-items-center">
-	              	<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-car-seat"></span></div>
+	              	<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-car-seat "></span></div>
 	              	<div class="text">
 		                <h3 class="heading mb-0 pl-3">
 		                	Seats
@@ -211,8 +211,9 @@
 						    </div>
 
 						    <div class="tab-pane fade" id="pills-manufacturer" role="tabpanel" aria-labelledby="pills-manufacturer-tab">
-						      <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-									<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
+						        <p>The Range Rover Evoque R fuses compact luxury with off-road capability and head-turning design.</p>
+  <p>Premium interior finishes, capable chassis and advanced tech deliver a refined, confident drive whether in the city or on light trails.</p>
+
 						    </div>
 
 						    <div class="tab-pane fade" id="pills-review" role="tabpanel" aria-labelledby="pills-review-tab">
@@ -361,9 +362,8 @@
               </a></h2>
               <p>Location de voitures à Casablanca et partout au Maroc. Service professionnel et assistance 24/7.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.instagram.com/atlasafrica_car/"><span class="icon-whatsapp"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.instagram.com/atlasafrica_car/"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
           </div>
@@ -371,11 +371,9 @@
             <div class="ftco-footer-widget mb-4 ml-md-5">
               <h2 class="ftco-heading-2">Information</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">About</a></li>
-                <li><a href="#" class="py-2 d-block">Services</a></li>
-                <li><a href="#" class="py-2 d-block">Term and Conditions</a></li>
-                <li><a href="#" class="py-2 d-block">Best Price Guarantee</a></li>
-                <li><a href="#" class="py-2 d-block">Privacy &amp; Cookies Policy</a></li>
+                <li><a href="about.html" class="py-2 d-block">About</a></li>
+                <li><a href="services.html" class="py-2 d-block">Services</a></li>
+                <li><a href="car.html" class="py-2 d-block">Best Price Guarantee</a></li>
               </ul>
             </div>
           </div>
@@ -383,11 +381,9 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Customer Support</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">FAQ</a></li>
-                <li><a href="#" class="py-2 d-block">Payment Option</a></li>
-                <li><a href="#" class="py-2 d-block">Booking Tips</a></li>
-                <li><a href="#" class="py-2 d-block">How it works</a></li>
-                <li><a href="#" class="py-2 d-block">Contact Us</a></li>
+                <li><a href="contact.html" class="py-2 d-block">FAQ</a></li>
+                <li><a href="contact.html" class="py-2 d-block">Payment Option</a></li>
+                <li><a href="contact.html" class="py-2 d-block">Contact Us</a></li>
               </ul>
             </div>
           </div>
@@ -396,9 +392,9 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text"> 22 Rue d'Anfa, Casablanca 20000, Maroc</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+212 679494949</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">contact@atlasafricacar.ma</span></a></li>
+	                <li><a href="https://maps.app.goo.gl/FGphiQJ91JrdEioW6?g_st=ipc"><span class="icon icon-map-marker"></span><span class="text"> Bd El Ouahda, Nouasser, Maroc</span></li>
+	                <li><a href="tel://+2127099073319"><span class="icon icon-phone"></span><span class="text">+212 709073319</span></a></li>
+	                <li><a href="mailto:contact@atlasafricacar.ma"><span class="icon icon-envelope"></span><span class="text">contact@atlasafricacar.ma</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -412,7 +408,6 @@
         </div>
       </div>
     </footer>
-    
   
 
   <!-- loader -->
