--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 	  </nav>
     <!-- END nav -->
     
-    <section class="hero-wrap  js-fullheight" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/car_catalog/atlas_africa_car_services2.jpeg');" stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-start">
@@ -72,8 +72,12 @@
     <section class="ftco-section bg-black ftco-about">
 			<div class="container">
 				<div class="row no-gutters">
-					<div class="col-md-6 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/about.jpg);">
-					</div>
+					<div class="col-md-6 p-md-5 d-flex justify-content-center align-items-center">
+            <video autoplay muted loop playsinline class="w-100 h-100 object-fit-cover">
+            <source src="videos/video-at-af.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+            </video>
+          </div>
 					<div class="col-md-6 wrap-about ftco-animate">
 	          <div class="heading-section heading-section-white pl-md-5">
 	          	<span class="subheading">About us</span>
@@ -202,19 +206,18 @@
     	</div>
     </section>	
 
-    <footer class="ftco-footer ftco-bg-dark ftco-section">
+    <footer class="ftco-footer ftco-bg-black ftco-section">
       <div class="container">
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2"><a href="index.html" class="logo">
+              <h2 class="ftco-heading-2"><a href="#" class="logo">
                 <img src="images/logo_black.PNG" alt="Atlas Africa Car" class="site-logo footer-logo">
               </a></h2>
               <p>Location de voitures à Casablanca et partout au Maroc. Service professionnel et assistance 24/7.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.instagram.com/atlasafrica_car/"><span class="icon-whatsapp"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.instagram.com/atlasafrica_car/"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
           </div>
@@ -224,9 +227,7 @@
               <ul class="list-unstyled">
                 <li><a href="about.html" class="py-2 d-block">About</a></li>
                 <li><a href="services.html" class="py-2 d-block">Services</a></li>
-                <li><a href="index.html" class="py-2 d-block">Term and Conditions</a></li>
-                <li><a href="contact.html" class="py-2 d-block">Best Price Guarantee</a></li>
-                <li><a href="index.html" class="py-2 d-block">Privacy &amp; Cookies Policy</a></li>
+                <li><a href="car.html" class="py-2 d-block">Best Price Guarantee</a></li>
               </ul>
             </div>
           </div>
@@ -236,8 +237,6 @@
               <ul class="list-unstyled">
                 <li><a href="contact.html" class="py-2 d-block">FAQ</a></li>
                 <li><a href="contact.html" class="py-2 d-block">Payment Option</a></li>
-                <li><a href="contact.html" class="py-2 d-block">Booking Tips</a></li>
-                <li><a href="contact.html" class="py-2 d-block">How it works</a></li>
                 <li><a href="contact.html" class="py-2 d-block">Contact Us</a></li>
               </ul>
             </div>
@@ -247,9 +246,9 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">22 Rue d'Anfa, Casablanca 20000, Maroc</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+212 679494949</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">contact@atlasafricacar</span></a></li>
+	                <li><a href="https://maps.app.goo.gl/FGphiQJ91JrdEioW6?g_st=ipc"><span class="icon icon-map-marker"></span><span class="text"> Bd El Ouahda, Nouasser, Maroc</span></li>
+	                <li><a href="tel://+2127099073319"><span class="icon icon-phone"></span><span class="text">+212 709073319</span></a></li>
+	                <li><a href="mailto:contact@atlasafricacar.ma"><span class="icon icon-envelope"></span><span class="text">contact@atlasafricacar.ma</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -258,13 +257,11 @@
         <div class="row">
           <div class="col-md-12 text-center">
 
-            <p>
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved </p>
+            <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</p>
           </div>
         </div>
       </div>
     </footer>
-    
   
 
   <!-- loader -->
