--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
 	  </nav>
     <!-- END nav -->
     
-    <section class="hero-wrap  js-fullheight" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
+    <section class="hero-wrap hero-wrap2 js-fullheight " style="background-image: url('images/car_catalog/atlas_africa_car_services2.jpeg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-start">
@@ -84,7 +84,7 @@
 			          		<span class="icon-map-o brand-black"></span>
 			          	</div>
 			            <p>
-                    <span class="brand-black">Address:</span>	22 Rue d'Anfa, Casablanca 20000, Maroc</p>
+                    <span class="brand-black">Address:</span> <a href="https://maps.app.goo.gl/FGphiQJ91JrdEioW6?g_st=ipc"> Bd El Ouahda, Nouasser, Maroc</p>
 			          </div>
 		          </div>
 		          <div class="col-md-12">
@@ -92,7 +92,7 @@
 			          	<div class="icon mr-3">
 			          		<span class="icon-mobile-phone brand-black"></span>
 			          	</div>
-			            <p><span class="brand-black">Phone:</span> <a href="tel://0679494949">+ 212 679494949</a></p>
+			            <p><span class="brand-black">Phone:</span> <a href="tel://07709073319">+ 212 709073319</a></p>
 			          </div>
 		          </div>
 		          <div class="col-md-12">
@@ -138,7 +138,7 @@
     </section>
 	
 
-    <footer class="ftco-footer ftco-bg-dark ftco-section">
+    <footer class="ftco-footer ftco-bg-black ftco-section">
       <div class="container">
         <div class="row mb-5">
           <div class="col-md">
@@ -148,9 +148,8 @@
               </a></h2>
               <p>Location de voitures à Casablanca et partout au Maroc. Service professionnel et assistance 24/7.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.instagram.com/atlasafrica_car/"><span class="icon-whatsapp"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.instagram.com/atlasafrica_car/"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
           </div>
@@ -158,11 +157,9 @@
             <div class="ftco-footer-widget mb-4 ml-md-5">
               <h2 class="ftco-heading-2">Information</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">About</a></li>
-                <li><a href="#" class="py-2 d-block">Services</a></li>
-                <li><a href="#" class="py-2 d-block">Term and Conditions</a></li>
-                <li><a href="#" class="py-2 d-block">Best Price Guarantee</a></li>
-                <li><a href="#" class="py-2 d-block">Privacy &amp; Cookies Policy</a></li>
+                <li><a href="about.html" class="py-2 d-block">About</a></li>
+                <li><a href="services.html" class="py-2 d-block">Services</a></li>
+                <li><a href="car.html" class="py-2 d-block">Best Price Guarantee</a></li>
               </ul>
             </div>
           </div>
@@ -170,11 +167,9 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Customer Support</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">FAQ</a></li>
-                <li><a href="#" class="py-2 d-block">Payment Option</a></li>
-                <li><a href="#" class="py-2 d-block">Booking Tips</a></li>
-                <li><a href="#" class="py-2 d-block">How it works</a></li>
-                <li><a href="#" class="py-2 d-block">Contact Us</a></li>
+                <li><a href="contact.html" class="py-2 d-block">FAQ</a></li>
+                <li><a href="contact.html" class="py-2 d-block">Payment Option</a></li>
+                <li><a href="contact.html" class="py-2 d-block">Contact Us</a></li>
               </ul>
             </div>
           </div>
@@ -183,9 +178,9 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text"> 22 Rue d'Anfa, Casablanca 20000, Maroc</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+212 708765015</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">contact@atlasafricacar.ma</span></a></li>
+	                <li><a href="https://maps.app.goo.gl/FGphiQJ91JrdEioW6?g_st=ipc"><span class="icon icon-map-marker"></span><span class="text"> Bd El Ouahda, Nouasser, Maroc</span></li>
+	                <li><a href="tel://+2127099073319"><span class="icon icon-phone"></span><span class="text">+212 709073319</span></a></li>
+	                <li><a href="mailto:contact@atlasafricacar.ma"><span class="icon icon-envelope"></span><span class="text">contact@atlasafricacar.ma</span></a></li>
 	              </ul>
 	            </div>
             </div>
