--- a/index.html
+++ b/index.html
@@ -304,8 +304,6 @@
             <div class="carousel-testimony bg-primary owl-carousel ftco-owl">
               <div class="item">
                 <div class="testimony-wrap rounded  text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url(images/person_3.jpg)">
-                  </div>
                   <div class="text pt-4">
                     <p class="mb-4"> Service impeccable ! La voiture était propre et récente, le personnel très professionnel. Je recommande vivement Atlas Africa Car pour vos déplacements au Maroc.</p>
                     <p class="name">Imad L.</p>
@@ -315,8 +313,6 @@
               </div>
               <div class="item">
                 <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url(images/person_2.jpg)">
-                  </div>
                   <div class="text pt-4">
                     <p class="mb-4"> Réservation facile, prise en charge rapide à l’aéroport et tarifs très compétitifs. Merci à toute l’équipe pour leur disponibilité et leur gentillesse.</p>
                     <p class="name">Youssef E.</p>
@@ -325,35 +321,11 @@
                 </div>
               </div>
               <div class="item">
-                <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url(images/person_3.jpg)">
-                  </div>
+                <div class="testimony-wrap rounded text-center py-4 pb-5"
                   <div class="text pt-4">
                     <p class="mb-4"> J’ai loué un SUV pour un road trip dans le sud du Maroc, tout s’est parfaitement déroulé. Assistance 24h/24 très rassurante. Je reviendrai sans hésiter !</p>
                     <p class="name">Roger Scott</p>
                     <span class="position">UI Designer</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url(images/person_1.jpg)">
-                  </div>
-                  <div class="text pt-4">
-                    <p class="mb-4"> J’ai loué un SUV pour un road trip dans le sud du Maroc, tout s’est parfaitement déroulé. Assistance 24h/24 très rassurante. Je reviendrai sans hésiter !</p>
-                    <p class="name">Imad L.</p>
-                    <span class="position">Rabat</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap rounded text-center py-4 pb-5">
-                  <div class="user-img mb-2" style="background-image: url(images/person_1.jpg)">
-                  </div>
-                  <div class="text pt-4">
-                    <p class="mb-4"> J’ai loué un SUV pour un road trip dans le sud du Maroc, tout s’est parfaitement déroulé. Assistance 24h/24 très rassurante. Je reviendrai sans hésiter !</p>
-                    <p class="name">Samir B.</p>
-                    <span class="position">Casablanca</span>
                   </div>
                 </div>
               </div>
